fix gap size

--- a/src/index/containers/cabinet/CabinetWalletScreen/CabinetWalletScreen.less
+++ b/src/index/containers/cabinet/CabinetWalletScreen/CabinetWalletScreen.less
@@ -146,7 +146,7 @@
 }
 
 .CabinetWalletScreen__height_padding {
-  height: 24px;
+  height: var(--gap-size);
   width: 100%;
 }
 
